# tpt-anvil

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  deny.toml  package-lock.json  package.json  rustfmt.toml  spec agent.txt  spec.txt  todo 1260723.md  todo.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/DISCUSSION_TEMPLATE/: general.yml  ideas.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish-jetbrains.yml  publish-vscode.yml  release.yml
crates/anvil-capabilities/: Cargo.toml
crates/anvil-capabilities/benchmarks/core/: py-list-comprehension-01.toml  py-type-annotation-01.toml  rust-borrow-checker-01.toml  rust-iterator-01.toml  rust-off-by-one-01.toml  rust-option-handling-01.toml  ts-async-error-01.toml  ts-null-handling-01.toml
crates/anvil-capabilities/benchmarks/scaffold/python/: utils.py
crates/anvil-capabilities/benchmarks/scaffold/rust/: main.rs
crates/anvil-capabilities/benchmarks/scaffold/typescript/: utils.ts
crates/anvil-capabilities/src/: commands.rs  context.rs  conversation.rs  diff.rs  lib.rs  vault.rs  verify.rs
crates/anvil-capabilities/src/benchmark/: adaptive.rs  comparison.rs  mod.rs  runner.rs  scorecard.rs  store.rs  suite.rs
crates/anvil-capabilities/tests/: vault_integration.rs
crates/anvil-config/: Cargo.toml
crates/anvil-config/src/: lib.rs  loader.rs  schema.rs  watcher.rs
crates/anvil-core/: Cargo.toml
crates/anvil-core/src/: error.rs  ipc.rs  lib.rs  types.rs
crates/anvil-daemon/: Cargo.toml
crates/anvil-daemon/src/: cli.rs  main.rs  pid.rs  server.rs
crates/anvil-daemon/tests/: ipc_integration.rs
crates/anvil-indexer/: Cargo.toml
crates/anvil-indexer/src/: bm25.rs  callgraph.rs  embedding.rs  lib.rs  retriever.rs  store.rs  symbols.rs  watcher.rs
crates/anvil-inference/: Cargo.toml
crates/anvil-inference/src/: accel.rs  backend.rs  candle.rs  lib.rs  llama_cpp.rs  ollama.rs  prompt.rs  registry.rs
crates/anvil-providers/: Cargo.toml
crates/anvil-providers/src/: anthropic.rs  azure.rs  cost.rs  custom.rs  lib.rs  openai.rs  openrouter.rs  provider.rs  registry.rs  retry.rs
crates/anvil-providers/tests/: mock_providers.rs
crates/tpt-anvil-indexer/: Cargo.toml  README.md
crates/tpt-anvil-indexer/src/: fusion.rs  lib.rs  outline.rs  retriever.rs  types.rs  walker.rs
crates/tpt-anvil-providers/: Cargo.toml  README.md
crates/tpt-anvil-providers/src/: anthropic.rs  azure.rs  cost.rs  custom.rs  keystore.rs  lib.rs  openai.rs  openrouter.rs  provider.rs  recent_models.rs  registry.rs  retry.rs  router.rs  types.rs
crates/tpt-anvil-providers/tests/: mock_providers.rs
docs/: architecture.md  cloud-providers.md  config-reference.md  contributing.md  getting-started.md  model-setup.md  slash-commands.md
extensions/vscode/: .vscodeignore  LICENSE.txt  MARKETPLACE.md  README.md  eslint.config.js  package.json  tsconfig.test.json  vitest.config.ts
extensions/vscode/dist-test/: runTest.js  runTest.js.map
extensions/vscode/dist-test/suite/: extension.test.js  extension.test.js.map  index.js  index.js.map
extensions/vscode/src/: chat.ts  chatViewProvider.ts  daemon.ts  diff.ts  diffCore.ts  extension.ts
extensions/vscode/test/e2e/: runTest.ts
extensions/vscode/test/e2e/suite/: extension.test.ts  index.ts
extensions/vscode/test/unit/: diffCore.test.ts
plugins/jetbrains/: MARKETPLACE.md  build.gradle.kts  settings.gradle.kts
plugins/jetbrains/src/main/kotlin/com/tptsolutions/anvil/: DaemonClient.kt
plugins/jetbrains/src/main/kotlin/com/tptsolutions/anvil/actions/: SlashCommandActions.kt
plugins/jetbrains/src/main/kotlin/com/tptsolutions/anvil/diff/: AnvilDiffHandler.kt
plugins/jetbrains/src/main/kotlin/com/tptsolutions/anvil/settings/: AnvilConfigurable.kt  AnvilSettings.kt
plugins/jetbrains/src/main/kotlin/com/tptsolutions/anvil/ui/: AnvilChatPanel.kt  AnvilStatusBarWidget.kt  AnvilStatusBarWidgetFactory.kt  AnvilToolWindowFactory.kt
plugins/jetbrains/src/main/kotlin/com/tptsolutions/anvil/util/: CommandParsing.kt
plugins/jetbrains/src/test/kotlin/com/tptsolutions/anvil/diff/: AnvilDiffHandlerTest.kt
plugins/jetbrains/src/test/kotlin/com/tptsolutions/anvil/util/: CommandParsingTest.kt
