[workspace]
resolver = "2"
members = [
    "crates/anvil-core",
    "crates/anvil-config",
    "crates/anvil-inference",
    "crates/tpt-anvil-providers",
    "crates/tpt-anvil-indexer",
    "crates/anvil-capabilities",
    "crates/anvil-daemon",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["TPT Solutions <opensource@tpt-solutions.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tpt-solutions/tpt-anvil"
homepage = "https://github.com/tpt-solutions/tpt-anvil"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Async traits
async-trait = "0.1"

# File watching
notify = "6"

# Config
config = "0.14"
dirs = "5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
