[package]
name = "anvil-capabilities"
description = "AI slash command capabilities for TPT Anvil"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anvil-core = { path = "../anvil-core" }
anvil-config = { path = "../anvil-config" }
anvil-inference = { path = "../anvil-inference" }
tpt-anvil-providers = { path = "../tpt-anvil-providers" }
tpt-anvil-indexer = { path = "../tpt-anvil-indexer" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
dirs = { workspace = true }
toml = "0.8"
