[package]
name = "anvil-daemon"
description = "TPT Anvil background daemon and CLI"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "anvil"
path = "src/main.rs"

[dependencies]
anvil-core = { path = "../anvil-core" }
anvil-config = { path = "../anvil-config" }
anvil-inference = { path = "../anvil-inference" }
tpt-anvil-providers = { path = "../tpt-anvil-providers" }
tpt-anvil-indexer = { path = "../tpt-anvil-indexer" }
anvil-capabilities = { path = "../anvil-capabilities" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
dirs = { workspace = true }
rand = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
