[package]
name = "tpt-anvil-indexer"
description = "Code indexing and semantic search for TPT Anvil"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["code-search", "tree-sitter", "indexing", "bm25", "embeddings"]
categories = ["development-tools", "text-processing"]

[dependencies]
anvil-core = { path = "../anvil-core" }
anvil-config = { path = "../anvil-config" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
notify = { workspace = true }
reqwest = { workspace = true }
futures-executor = "0.3"

# Tree-sitter
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.23"
tree-sitter-c-sharp = "0.23"

# SQLite vector store
rusqlite = { version = "0.31", features = ["bundled"] }

# BM25 / full-text search
tantivy = "0.22"

# File traversal
walkdir = "2"
ignore = "0.4"
