[package]
name = "tpt-anvil-providers"
description = "Cloud LLM provider integrations for TPT Anvil"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["llm", "openai", "anthropic", "azure", "cloud-ai"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
anvil-core = { path = "../anvil-core" }
anvil-config = { path = "../anvil-config" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
keyring = "3"
futures-util = "0.3"

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true }
